2011-01-19

	* src/sylpheed-marshal.list
	  src/textview.c
	  src/plugin.[ch]
	  PLUGIN.txt
	  PLUGIN.ja.txt: added "textview-menu-popup" signal for plug-ins.
	* plugin/test/test.[ch]: use "textview-menu-popup" signal.

2011-01-19

	* libsylph/filter.[ch]
	  src/inc.c
	  src/summaryview.c: check the return value of junk filter command
	  and show error dialog on failure.

2011-01-18

	* src/inc.c
	  src/folderview.c: do not count junk-filtered or trashed messages as
	  new ones.
	  Do not display new state as red color on Junk folder.

2011-01-18

	* src/addressadd.c: removed warnings about xpm.

2011-01-17

	* src/summaryview.c: summary_qsearch(): fixed crash when folder tree is
	  empty.

2011-01-17

	* version 3.1.0beta7

2011-01-17

	* manual/ja/sylpheed.sgml: updated Japanese manual.

2011-01-17

	* src/version.h.in
	  src/about.c: added build revision to the about dialog.

2011-01-17

	* src/summaryview.c: summary_get_tmp_marked_msg_list(): don't use
	  full copy for saving flags.

2011-01-16

	* src/summaryview.c: summary_restore_tmp_marks(): optimized.

2011-01-14

	* src/summaryview.c: preserve temporary movec/copy marks on refresh.
	  summary_show_queued_msgs(): update status display.

2011-01-11

	* src/update_check.c: win32: properly set the parameter of default
	  download URL.
	* makewin32.sh: also install attachment_tool plug-in.

2011-01-07

	* libsylph/prefs_common.[ch]
	  src/compose.c
	  src/send_message.c
	  src/prefs_common_dialog.c: added an option to disable the send
	  dialog. Made the compose window insensitive on sending.

2011-01-07

	* src/send_message.[ch]: send_message_queue_all(): refactored.

2011-01-06

	* libsylph/filter.c: filter_match_rule(): optimized by modifying the
	  order of condition matching.

2011-01-06

	* src/prefs_common_dialog.c: modified 'Address auto-completion'
	  setting layout.

2011-01-06

	* src/query_search.c
	  src/prefs_filter_edit.c: made the default boolean type of query